# dating

./: .commitlintrc.js  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  ADMIN_PANEL_SUMMARY.md  ARCHITECTURE_REFACTORING_SUMMARY.md  BACKLOG.md  BUGFIX_SUMMARY.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  COMPLETE_SYSTEM_RECOVERY_PLAN.md  CONTRIBUTING.md  DATA_PERSISTENCE_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_FIX_SUMMARY_PORT_8080.md  DEPLOYMENT_SAFETY_FIX_SUMMARY.md  DEVELOPMENT_RULES.md  DOCUMENTATION.md  DOCUMENTATION_REFACTORING_2025.md  DOCUMENTATION_UPDATE_2025.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  EPIC_A_SUMMARY.md  EPIC_B_IMPLEMENTATION.md  EPIC_B_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PROFILE_FIX.md  ISSUE_925A92F5_COMPLETE.md  ISSUE_COMPLETION_SUMMARY.md  JWT_SECURITY_ANALYSIS.md  LOKI_INGESTER_FIX.md  MICROSERVICES_MIGRATION_COMPLETE.md  MICROSERVICES_QUICK_START.md  MONITORING_REFACTORING_SUMMARY.md  Makefile  (+44 more)
.cursor/: README.md  RULES-CONSOLIDATED.md  RULES.md  RULES.md.backup  RULES.md.new  consolidation-plan.md  deployment-and-monitoring.rules  git-flow-and-docker.rules  naming-conventions.md  production.rules  readonly-state.rules  rule-audit-report.md  rules  validation-report.md
.cursor/archive/: production.rules  rebuilt.rules  troubleshooting.rules
.cursor/archive-consolidation/: RULES-OLD.md
.cursor/deployment/: CI_CD_GUIDE.md
.cursor/development/: CODE_QUALITY.md  ERROR_HANDLING.md
.cursor/infrastructure/: DOCKER_SECURITY.md  DOCKER_USER_STANDARDS.md  traefik-routes.md
.cursor/monitoring/: METRICS_GUIDE.md  OBSERVABILITY.md
.cursor/rules/: rules.mdc  rules_tldr.md
.cursor/rules-mdc/: deployment-and-monitoring.mdc  git-flow-and-docker.mdc
.github/: CI_CD_SUMMARY.md  README.md  SECRETS_SETUP.md  WORKFLOWS.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-microservices.yml  deploy.yml  docker-build.yml  health-check.yml  lint.yml  pr-validation.yml  release.yml  test.yml  webapp-ci.yml
adapters/: __init__.py
adapters/telegram/: __init__.py  notification.py  repository.py  storage.py
bot/: README.md  __init__.py  analytics.py  api.py  api_client.py  cache.py  config.py  db.py  geo.py  main.py  media.py  repository.py  security.py  validation.py
core/: README.md  __init__.py  database.py  exceptions.py  health.py
core/interfaces/: __init__.py  notification.py  repository.py  storage.py
core/messaging/: __init__.py  publisher.py  subscriber.py
core/metrics/: __init__.py  business_metrics.py
core/middleware/: __init__.py  audit_logging.py  correlation.py  error_handler.py  error_handling.py  jwt_middleware.py  metrics_middleware.py  rate_limiting.py  request_logging.py  security_metrics.py  service_rate_limiters.py  standard_stack.py  tracing.py  (+2 more)
docker/: entrypoint.sh  healthcheck_bot.py
docs/: ADMIN_PANEL_GUIDE.md  API_CONTRACT_VERIFICATION.md  API_DOCUMENTATION.md  API_GATEWAY_ROUTES.md  API_V1_OPENAPI.yaml  API_V2_OPENAPI.yaml  API_VERSIONING.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_MIGRATION_GUIDE.md  BOTFATHER_CONFIGURATION.md  BOT_ARCHITECTURE_CHANGE.md  BUG_FIXES_ISSUES_1_2_3.md  BUG_FIXES_OCTOBER_2024.md  BUG_FIXES_OCTOBER_2025.md  BUG_FIXES_PROFILE_CHECK_GRAFANA.md  BUG_FIX_DEPLOYMENT_HEALTH_CHECK.md  BUG_FIX_HEALTH_CHECK_IMPROVEMENT.md  BUG_FIX_NSFW_CLASSIFIER_CRASH.md  BUG_FIX_NUDENET_V3_INCOMPATIBILITY.md  BUG_FIX_PORT_5432_CONFLICT.md  BUG_FIX_PORT_8080_CONFLICT.md  BUG_FIX_PORT_8080_RACE_CONDITION.md  BUG_FIX_PORT_80_CONFLICT.md  CHAT_API_PROTOCOL.md  CHAT_OPENAPI.yaml  CHAT_SERVICE.md  CI_CD_GUIDE.md  CI_CD_MONITORING_UPDATE.md  CLEANUP_2025_01.md  DATABASE_INDEX_STRATEGY.md  DATA_PERSISTENCE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IDEMPOTENCY.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOYMENT_WORKFLOW_FIX.md  DEVELOPMENT_GUIDE.md  DISCOVERY_SERVICE.md  (+52 more)
examples/: README.md  __init__.py  profile_handler.py  webapp_auth_handler.py
gateway/: Dockerfile  __init__.py  main.py  main_old.py  websocket_proxy.py
migrations/: env.py  script.py.mako
monitoring/: ARCHITECTURE.md  QUICK_START.md  README.md
scripts/: README.md  add-future-imports.sh  backup_database.sh  check_alerts.sh  clean-remaining-logs.sh  create_admin.py  deploy-microservices.sh  deploy-production.sh  deploy-to-server.sh  deploy.sh  dev-logs.sh  dev-start.sh  dev-stop.sh  diagnose-miniapp.sh  final-clean-logs.sh  force-deploy.sh  generate-telegram-secret.py  health_check.sh  init-minio.sh  migration-smoke-check.sh  monitor-jwt-metrics.sh  optimize-layout.sh  quick-deploy.sh  release.sh  remove-debug-logs.sh  restore_database.sh  rotate-jwt-secret.sh  setup-code-quality.sh  test_query_performance.py  update_error_handling.py  validate-docker-security.sh  validate-frontend.sh  validate-migration-safety.sh  validate-monitoring.sh  validate_logging_setup.sh  verify-idempotency.sh
services/: README.md
tests/: README.md  __init__.py  conftest.py  test_admin.py  test_analytics.py  test_api.py  test_api_fixes.py  test_bot_handlers.py  test_bot_logic.py  test_cache.py  test_chat_endpoints.py  test_config.py  test_database.py  test_discovery.py  test_discovery_api.py  test_discovery_endpoints.py  test_enhanced_matching.py  test_gateway.py  test_geo.py  test_handlers_extended.py  test_image_processor.py  test_integration.py  test_interactions.py  test_main.py  test_main_utils.py  test_media.py  test_monitoring_config.py  test_orientation_filtering.py  test_refactoring_fixes.py  test_repository.py  test_security.py  test_security_fixes.py  test_sprint4_task2.py  test_telegram_security.py  test_utils.py  test_validation.py  test_webapp_handler.py
webapp/: .dockerignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  README.md  admin.html  components.json  eslint.config.mjs  index.html  index_old.html  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  test.html  vite.config.js  vitest.config.js
webapp_old/: README.md  index.html
(+273 files in other folders)
